# numeric-notebooks

./: .gitignore  Makefile  better_beta.ipynb  boost_lgamma.cpp  bound_untyped_lambda.ipynb  charts_fun.ipynb  gamma_function.ipynb  generic_numeric_code.ipynb  heatmap.ipynb  incomplete_beta.ipynb  math-functions-bug35.ipynb  math-functions-bug36.ipynb  math-functions-bug37.ipynb  math-functions-tests.ipynb  run-jupyter.sh  run-notebook  setup.sh  shell.nix  statistics_tests.ipynb
NB/: Colormap.hs  Heatmap.hs  Plot.hs
math-functions/: Cheb-tests.ipynb  NB  ibeta-29.ipynb  ibeta-35-rerr.ipynb  ibeta-35.ipynb  ibeta-precision.ipynb  igamma.ipynb  run-notebook  stack.yaml  test.cabal
nix/: ghc-parser.nix  ihaskell.nix  ipython-kernel.nix
sh/: jupyter.sh
stats/: statistics_tests.ipynb  test_chking.ipynb
utils/: gen_ibeta_table.py  gen_igamma_table.py  gen_loggamma_table.py
